--- a/first.html
+++ b/first.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is description">
+    <meta name="keywords" content="html tutorials, web development">
+    <meta name="robots" content="INDEX, FOLLOW">
     <title>First_html</title>
+    
+    <!--This is how we include External CSS-->
+    <link rel="stylesheet" href="first.css">
+
+    <!--This is how you include external JS-->
+    <script src="first.js"></script>
+
 </head>
 <body>
     Hello Anirudha!
