--- a/first.html
+++ b/first.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This is description">
     <meta name="keywords" content="html tutorials, web development">
     <meta name="robots" content="INDEX, FOLLOW">
-    <title>First_html</title>
+    <title>Fisrt HTML</title>
     
     <!--This is how we include External CSS-->
     <link rel="stylesheet" href="first.css">
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    Hello Anirudha!
+    This is first example of HTML.
     <!--This is comment-->
 </body>
 </html>
