--- a/Intro.html
+++ b/Intro.html
@@ -7,7 +7,7 @@
     <meta name="description" content="This is description">
     <meta name="keywords" content="html tutorials, web development">
     <meta name="robots" content="INDEX, FOLLOW">
-    <title>Fisrt HTML</title>
+    <title>Intro HTML</title>
     
     <!--This is how we include External CSS-->
     <link rel="stylesheet" href="first.css">
