--- a/CSS/BoxShadow_textShadow.html
+++ b/CSS/BoxShadow_textShadow.html
@@ -21,14 +21,14 @@
             
             /* box-shadow: offset-x offset-y color; */
             /* box-shadow: 5px 5px; */
-            /* box-shadow: -5px 5px yellow; */
+            /* box-shadow: -5px 5px yellow;/ */
 
             /* box-shadow: offset-x offset-y blur-radius color; */
             /* box-shadow: -5px 5px 100px yellow; */
 
             /* box-shadow: offset-x offset-y blur-radius spread-radius color; */
             /* box-shadow: -5px 5px 10px 10px yellow; */
-            box-shadow: inset 50px 5px 10px 10px yellow;
+            /* box-shadow: inset 50px 5px 10px 10px yellow; */
         }
 
         .card h1 {
