--- a/CSS/CSS_GRID_Intro.html
+++ b/CSS/CSS_GRID_Intro.html
@@ -13,13 +13,13 @@
             /* grid-template-columns: 300px auto 300px; */
 
             /* 1:1:1 */
-            /* grid-template-columns: 1fr 1fr 1fr;      */
+            grid-template-columns: 1fr 1fr 1fr;     
 
             /* 1:2:1 */
             /* grid-template-columns: 1fr 2fr 1fr;      */
 
             /* 10 times auto */
-            grid-template-columns: repeat(10,auto);
+            /* grid-template-columns: repeat(10,auto); */
 
             gap: 80px;
         }
