--- a/Project-4(Zomato_Webpage)/Zomato.html
+++ b/Project-4(Zomato_Webpage)/Zomato.html
@@ -13,17 +13,24 @@
 </head>
 
 <body>
+    <!-- Header and Navbar -->
     <header
     <nav id="navbar">
-        <ul id="_ul">
-            <li><a href="#">Get the App</a></li>
-            <li><a href="#">Add restaurant</a></li>
-            <li><a href="#">Log in</a></li>
-            <li><a href="#">Sign up</a></li>
+        <ul>
+            <ul id="_ul1">
+                <li><a href="#">Get the App</a></li>
+            </ul>
+            <ul id="_ul2">
+                <li><a href="#">Add restaurant</a></li>
+                <li><a href="#">Log in</a></li>
+                <li><a href="#">Sign up</a></li>
+            </ul>
         </ul>
     </nav>
 </header>
 
+
+<!-- Home section -->
     <section id="home">
         <div>
             <h1>Zomato</h1>
@@ -34,16 +41,60 @@
         </div>
         <div class="search-container">
         </div>
-
-
     </section>
+
+    <!-- More  -->
 
     <section id="more">
         <div class="boxes">
-            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore odit aperiam repudiandae nobis magnam eos id ex illo cumque hic aut voluptate, asperiores placeat quod tenetur magni rem natus quidem.</div>
-            <div class="box">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro ullam, minus inventore eveniet ad molestiae quos dolorum asperiores facere, dolores esse aperiam tenetur animi consequuntur minima dignissimos qui veritatis dicta.</div>
-            <div class="box">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas earum deserunt quisquam excepturi deleniti doloremque ut numquam, eveniet, nihil harum asperiores? Culpa animi consequatur ipsa atque beatae mollitia necessitatibus a!</div>
-            <div class="box">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo maxime minima atque ab iure corrupti eum blanditiis placeat fugiat, molestiae sequi impedit amet vel. Sint quia velit ipsa non dolorem.</div>
+            <div class="box">
+                <a href="#" class="_anchor">
+                    <div>
+                        <div>
+                            <img src="box1.webp" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <p>Order Online</p>
+                    </div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="#" class="_anchor">
+                    <div>
+                        <div>
+                            <img src="box2.webp" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <p>Dinig Out</p>
+                    </div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="#" class="_anchor">
+                    <div>
+                        <div>
+                            <img src="box3.webp" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <p>Pro and Pro Plus</p>
+                    </div>
+                </a>
+            </div>
+            <div class="box">
+                <a href="#" class="_anchor">
+                    <div>
+                        <div>
+                            <img src="box4.webp" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <p>Nightlife and Clubs</p>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
 </body>
