--- a/Frontend/Project-4(Zomato_Webpage)/Zomato.html
+++ b/Frontend/Project-4(Zomato_Webpage)/Zomato.html
@@ -18,7 +18,8 @@
     <nav id="navbar">
         <ul>
             <ul id="_ul1">
-                <li><a href="#">Get the App</a></li>
+                <!-- The rel attribute set to noreferrer noopener to prevent possible malicious attacks from the pages you link to -->
+                <li><a href="https://play.google.com/store/apps/details?id=com.application.zomato&hl=en_IN&gl=US" target="blank" rel="noopener noreferrer">Get the App</a></li>
             </ul>
             <ul id="_ul2">
                 <li><a href="#">Add restaurant</a></li>
@@ -97,6 +98,52 @@
             </div>
         </div>
     </section>
+
+    <section id="collections">
+        <div class="collecion_header">
+            <h1>Collections</h1>
+            <div class="explore_All_coll">
+                <div class="explore_">
+                <p>Explore curated lists of top resturants, cafes, pubs, and bars in Kolkata, based on trends</p>
+                </div>
+                <div class="All">
+                    <a href="#">All collections in Kolkata</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="collection_boxes">
+            <div class="coll_box coll_box-1">
+                <a href="#" class="_anchor">
+                    <div>
+                        <h2>Live Cricket Screening</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="coll_box coll_box-2">
+                <a href="#" class="_anchor">
+                    <div>
+                        <h2>Ramadan Specials</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="coll_box coll_box-3">
+                <a href="#" class="_anchor">
+                    <div>
+                        <h2>Newly opened</h2>
+                    </div>
+                </a>
+            </div>
+            <div class="coll_box coll_box-4">
+                <a href="#" class="_anchor">
+                    <div>
+                        <h2>Trending This Week</h2>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
