--- a/Frontend/Project-4(Zomato_Webpage)/Zomato.html
+++ b/Frontend/Project-4(Zomato_Webpage)/Zomato.html
@@ -112,7 +112,7 @@
             </div>
         </div>
 
-        <div class="collection_boxes">
+        <!-- <div class="collection_boxes">
             <div class="coll_box coll_box-1">
                 <a href="#" class="_anchor">
                     <div>
@@ -141,7 +141,26 @@
                     </div>
                 </a>
             </div>
+        </div> -->
+
+        <div>
+            <section class="collection_boxes">
+                <a href="#"  class="_anchor" target="blank">
+                    <div class="ima_ge">
+                        <img src="coll1.avif" alt="">
+                    </div>
+                    <section class="coll-box">
+                        <section class="p_h6">
+                            <div>
+                                <p color="#FFFFFF">Live Cricket Screening</p>
+                            </div>
+                            <div><h6>33 Places</h6></div>
+                        </section>
+                    </section>
+                </a>
+            </section>
         </div>
+
     </section>
 
 </body>
